--- a/public/index.html
+++ b/public/index.html
@@ -7,38 +7,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Realtime temperature monitoring system using Arduino and Node.js">
     <meta name="author" content="Narendra Kamath G">
-    <title>Node.js Temperature Monitor</title>
+    <title>Hydrogen VS Temperature</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Morris CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse">
-        <a class="navbar-brand" href="index.html">Node.js Temperature Monitor</a>
+    <!-- <nav class="navbar navbar-inverse">
+        <a class="navbar-brand" href="index.html">Temperature VS Hydrogen Recorder</a>
         <ul class="nav navbar-nav">
             <li class="active">
                 <a href="index.html">Home</a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
+    <header>
+        <h1>Temperature VS Hydrogen Recorder</h1>
+    </header>
     <div class="container">
         <div class="col-md-6">
-            <div id="line-example" style="min-height:250px;"></div>
+            <section class="one">
+                <h3>Temperature of the atmosphere</h3>
+                 <div id="temperature1" style="min-height:250px;"></div>
+            </section>
         </div>
         <div class="col-md-6">
-            <table class="table table-striped table-bordered table-hover">
+            <section class="two">
+                <h3>Temperature of the atmosphere in presence of Hydrogen</h3>
+                <div id="temperature2" style="min-height:250px;"></div>
+            </section>
+        </div>
+        <div class="col-md-6">
+            <section class="three">
+                <h3>Hydrogen gas level</h3>
+                <div id="hydrogen" style="min-height:250px;"></div>
+            </section>
+        </div>
+        <div class="col-md-6">
+            <section class="three">
+                <h3>Temperature VS Hydrogen</h3>
+                <div id="hydrogen" style="min-height:250px;"></div>
+            </section>
+        </div>
+        <!-- <div class="col-md-6">
+            <!-- <table class="table table-striped table-bordered table-hover">
                 <thead>
                     <tr>
-                        <th>Temperature</th>
                         <th>Time</th>
+                        <th>Sensor</th>
+                        <th>Value</th>
                     </tr>
                 </thead>
                 <tbody class="table-body">
                 </tbody>
-            </table>
-        </div>
+            </table> -->
+        </div> -->
+        <section class="five">
+            <h1>Conclusion</h1>
+        </section>
+        
+        <footer>
+            <p>For more details call us</p>
+        </footer>
     </div>
 </body>
 <!-- Socket.io library -->
