--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,6 @@
 </head>
 
 <body>
-    <!-- <nav class="navbar navbar-inverse">
-        <a class="navbar-brand" href="index.html">Temperature VS Hydrogen Recorder</a>
-        <ul class="nav navbar-nav">
-            <li class="active">
-                <a href="index.html">Home</a>
-            </li>
-        </ul>
-    </nav> -->
     <header>
         <h1>Temperature VS Hydrogen Recorder</h1>
     </header>
@@ -52,19 +44,8 @@
                 <div id="hydrogen" style="min-height:250px;"></div>
             </section>
         </div>
-        <!-- <div class="col-md-6">
-            <!-- <table class="table table-striped table-bordered table-hover">
-                <thead>
-                    <tr>
-                        <th>Time</th>
-                        <th>Sensor</th>
-                        <th>Value</th>
-                    </tr>
-                </thead>
-                <tbody class="table-body">
-                </tbody>
-            </table> -->
-        </div> -->
+ 
+        </div>
         <section class="five">
             <h1>Conclusion</h1>
         </section>
