Adding temp vs hydrogen graph

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         <div class="col-md-6">
             <section class="three">
                 <h3>Temperature VS Hydrogen</h3>
-                <div id="hydrogen" style="min-height:250px;"></div>
+                <div id="temp_hydrogen" style="min-height:250px;"></div>
             </section>
         </div>
  
