--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,11 @@
         </section>
         
         <footer>
-            <p>For more details call us</p>
+            <p>For more details contact us: </p>
+                <ul class="olist">
+                    <il> marina.2220525@stemsharkya.moe.edu.eg</il> <br>
+                    <il>menna.2220532@stemsharkya.moe.edu.eg </il>                    
+                </ul>
         </footer>
     </div>
 </body>
