--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,19 @@
         </div>
         <section class="five">
             <h1>Conclusion</h1>
+            <p> <b>Hydrogen gas as a greenhouse gas affects climate change and
+                increases the temperature by one Celsius for every 104.4 ppm of
+                hydrogen. Hydrogen gas is produced from a variety of resources,
+                recycling of the Aluminum industry produces hydrogen gas as a
+                bi-product, for example. Atmospheric hydrogen gas has increased
+                by 70% over the past 150 years. This
+                study used an IoT system to deduce the relation between hydrogen
+                abundance in the atmosphere and increasing temperature. The
+                analysis of the results proved that an increase of hydrogen gas in
+                the atmosphere by 104.4 ppm leads to an increase in temperature
+                by 1˚C. To decrease hydrogen emissions, Factories should use
+                filters on their chimneys; moreover, it is suggested to reuse the
+                hydrogen that is produced in another field.</b></p>
         </section>
         
         <footer>
